tests/derive/unique_entities.stderr
error: Unique will only work with component storages referred by &T or &mut T
 --> $DIR/unique_entities.rs:4:18
  |
4 | fn run(_: Unique<Entities>) {}
  |                  ^^^^^^^^
